# Take_5

./: .commitlintrc.yaml  .gitignore  .pre-commit-config.yaml  .releaserc.js  package-lock.json  package.json  pyproject.toml
src/: play_game.py
src/agents/: q_learning.py
src/game/: cards.py  player.py  rounds.py
src/strategies/: Neural_network_strategy.py  __init__.py  base_strategy.py  descending_order_strategy.py  human_input_strategy.py  random_strategies.py
